[package]
name = "citrinet-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Minimal Citrinet speech-to-text inference using ONNX Runtime and kaldi-native-fbank in Rust."
readme = "README.md"
repository = "https://github.com/RustedBytes/citrinet-rs"
homepage = "https://github.com/RustedBytes/citrinet-rs"
documentation = "https://docs.rs/citrinet-rs"
keywords = ["citrinet", "speech", "asr", "onnx", "audio"]
categories = ["multimedia::audio", "command-line-utilities"]

[dependencies]
hound = "3.5.1"
kaldi-native-fbank = "0.1.0"
ort = "2.0.0-rc.11"
clap = { version = "4.5.20", features = ["derive"] }
